--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <a href="#" class="lista-menu__link">Design & UX</a>
                 </li>
             </ul>
-            <img src="assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+            <img src="Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
@@ -73,14 +73,14 @@
         </ul>
 
         <div class="container">
-            <a href="#"><img src="assets/Favoritos.svg" alt="Meus Favoritos"
+            <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"
                     class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
-                <img src="assets/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <img src="Compras.svg" alt="Carrinho de compras" class="container__imagem">
                 <p class="container__texto">Minha sacola</p>
             </a>
             <a href="#" class="container__link">
-                <img src="assets/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <img src="Usuario.svg" alt="Meu perfil" class="container__imagem">
                 <p class="container__texto">Meu perfil</p>
             </a>
         </div>
@@ -101,17 +101,17 @@
 
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                    <div class="swiper-slide"><img src="ApacheKafka.svg"
                             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                    <div class="swiper-slide"><img src="Acessibilidade.svg"
                             alt="Livro sobre Acessibilidade da alura book"></div>
-                    <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                    <div class="swiper-slide"><img src="Guia Front-end.svg"
                             alt="Livro guia de Front-end da alura book"></div>
-                    <div class="swiper-slide"><img src="assets/Javascript.svg" alt="Livro de Javascript da alura book">
+                    <div class="swiper-slide"><img src="Javascript.svg" alt="Livro de Javascript da alura book">
                     </div>
-                    <div class="swiper-slide"><img src="assets/Lideranca.svg" alt="Livro sobre Lideranca da alura book">
+                    <div class="swiper-slide"><img src="Lideranca.svg" alt="Livro sobre Lideranca da alura book">
                     </div>
-                    <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre portugol alura book">
+                    <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol alura book">
                     </div>
                 </div>
                 <!-- If we need navigation buttons -->
@@ -125,12 +125,12 @@
                         <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
                         <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                     </div>
-                    <img src="assets/Angular.svg" alt="logo angular" class="descrição__imagem">
+                    <img src="Angular.svg" alt="logo angular" class="descrição__imagem">
                 </div>
                 <div class="card__botões">
                     <ul class="botões">
-                        <li class="botões__item"><img src="assets/Favoritos.svg" alt="botão favoritos"></li>
-                        <li class="botões__item"><img src="assets/Compras.svg" alt="carrinho de compras"></li>
+                        <li class="botões__item"><img src="Favoritos.svg" alt="botão favoritos"></li>
+                        <li class="botões__item"><img src="Compras.svg" alt="carrinho de compras"></li>
                     </ul>
                     <a href="#" class="botões__ancora">Saiba mais</a>
                 </div>
@@ -147,17 +147,17 @@
                 <div class="swiper-pagination"></div>
                 <div class="swiper-wrapper">
                     <!-- Slides -->
-                    <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                    <div class="swiper-slide"><img src="ApacheKafka.svg"
                             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-                    <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                    <div class="swiper-slide"><img src="Acessibilidade.svg"
                             alt="Livro sobre Acessibilidade da alura book"></div>
-                    <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                    <div class="swiper-slide"><img src="Guia Front-end.svg"
                             alt="Livro guia de Front-end da alura book"></div>
-                    <div class="swiper-slide"><img src="assets/Javascript.svg" alt="Livro de Javascript da alura book">
+                    <div class="swiper-slide"><img src="Javascript.svg" alt="Livro de Javascript da alura book">
                     </div>
-                    <div class="swiper-slide"><img src="assets/Lideranca.svg" alt="Livro sobre Lideranca da alura book">
+                    <div class="swiper-slide"><img src="Lideranca.svg" alt="Livro sobre Lideranca da alura book">
                     </div>
-                    <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre portugol alura book">
+                    <div class="swiper-slide"><img src="Portugol.svg" alt="Livro sobre portugol alura book">
                     </div>
                 </div>
                 <!-- If we need navigation buttons -->
@@ -167,19 +167,19 @@
             <div class="card">
                 <div class="card__descrição">
                     <div class="descrição">
-                        <img src="assets/Estrelinhas.svg" alt="estrelinhas" class="descrição__imagem">
+                        <img src="Estrelinhas.svg" alt="estrelinhas" class="descrição__imagem">
                         <h3 class="descrição__titulo">Autora do Mês</h3>
                         <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
                         <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
                             Front-End.
                         </p>
                     </div>
-                    <img src="assets/Escritora.svg" alt="foto Escritora" class="descrição__imagem">
+                    <img src="Escritora.svg" alt="foto Escritora" class="descrição__imagem">
                 </div>
                 <div class="card__botões">
                     <ul class="botões">
-                        <li class="botões__item"><img src="assets/Favoritos.svg" alt="botão favoritos"></li>
-                        <li class="botões__item"><img src="assets/Compras.svg" alt="carrinho de compras"></li>
+                        <li class="botões__item"><img src="Favoritos.svg" alt="botão favoritos"></li>
+                        <li class="botões__item"><img src="Compras.svg" alt="carrinho de compras"></li>
                     </ul>
                     <a href="#" class="botões__ancora">Saiba mais</a>
                 </div>
@@ -230,11 +230,11 @@
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Educação</li>
             <li class="lista-rodapé__item">
-                <img src="assets/CasaDoCodigo.svg" alt="Logo da casa do código">
+                <img src="CasaDoCodigo.svg" alt="Logo da casa do código">
                 <a href="#" class="lista-rodapé__link"> Casa do Código</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/Caelum.svg" alt="Logo da Caelum">
+                <img src="Caelum.svg" alt="Logo da Caelum">
                 <a href="#" class="lista-rodapé__link"> Caelum</a>
             </li>
         </ul>
@@ -242,62 +242,62 @@
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Educação online</li>
             <li class="lista-rodapé__item">
-                <img src="assets/Alura.svg" alt="Logo da Alura">
+                <img src="Alura.svg" alt="Logo da Alura">
                 <a href="#" class="lista-rodapé__link"> Alura</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/AluraEmpresas.svg" alt="Logo da Alura Alura Empresas">
+                <img src="AluraEmpresas.svg" alt="Logo da Alura Alura Empresas">
                 <a href="#" class="lista-rodapé__link"> Alura Empresas</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/AluraLATAM.svg" alt="Logo da Alura LATAM">
+                <img src="AluraLATAM.svg" alt="Logo da Alura LATAM">
                 <a href="#" class="lista-rodapé__link"> Alura LATAM</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/AluraStart.svg" alt="Logo da Alura Start">
+                <img src="AluraStart.svg" alt="Logo da Alura Start">
                 <a href="#" class="lista-rodapé__link"> AluraStart</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/MusicDot.svg" alt="Logo da MusicDot">
+                <img src="MusicDot.svg" alt="Logo da MusicDot">
                 <a href="#" class="lista-rodapé__link"> MusicDot</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/AluraLingua.svg" alt="Logo da Alura Lingua">
+                <img src="AluraLingua.svg" alt="Logo da Alura Lingua">
                 <a href="#" class="lista-rodapé__link"> Alura Lingua</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/PM3.svg" alt="Logo da PM3">
+                <img src="PM3.svg" alt="Logo da PM3">
                 <a href="#" class="lista-rodapé__link"> PM3</a>
             </li>
         </ul>
         <ul class="lista-rodapé">
             <li class="lista-rodapé__titulo">Comunidade</li>
             <li class="lista-rodapé__item">
-                <img src="assets/HipstersTech.svg" alt="Logo da Hipsters Tech">
+                <img src="HipstersTech.svg" alt="Logo da Hipsters Tech">
                 <a href="#" class="lista-rodapé__link"> Hipster ponto Tech</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/ScubaDev.svg" alt="Logo da Scuba Dev">
+                <img src="ScubaDev.svg" alt="Logo da Scuba Dev">
                 <a href="#" class="lista-rodapé__link"> Scuba Dev</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/LayersTech.svg" alt="Logo da Layers ponto Tech">
+                <img src="LayersTech.svg" alt="Logo da Layers ponto Tech">
                 <a href="#" class="lista-rodapé__link"> Layers ponto Tech</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/LikeABoss.svg" alt="Logo da Like A Boss">
+                <img src="LikeABoss.svg" alt="Logo da Like A Boss">
                 <a href="#" class="lista-rodapé__link"> Like a Boss</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/CarreiraSemFronteira.svg" alt="Logo da Carreira Sem Fronteira">
+                <img src="CarreiraSemFronteira.svg" alt="Logo da Carreira Sem Fronteira">
                 <a href="#" class="lista-rodapé__link"> Carreira sem Fronteira</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/HipstersJobs.svg" alt="Logo da Hipsters ponto Jobs">
+                <img src="HipstersJobs.svg" alt="Logo da Hipsters ponto Jobs">
                 <a href="#" class="lista-rodapé__link"> Hipsters ponto Jobs</a>
             </li>
             <li class="lista-rodapé__item">
-                <img src="assets/GUJ.svg" alt="Logo da GUJ">
+                <img src="GUJ.svg" alt="Logo da GUJ">
                 <a href="#" class="lista-rodapé__link"> GUJ</a>
             </li>
         </ul>
